--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,6 @@
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
     "strictDomEventTypes":false,
+    "strictPropertyInitialization":false
   }
 }
