--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.2.3",
     "bootstrap": "5.0.0-beta2",
     "bootstrap-icons": "^1.4.0",
+    "eslint-config-prettier": "^8.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -41,6 +42,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "prettier": "2.2.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
