--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
+    "@types/overlayscrollbars": "^1.12.0",
     "bootstrap": "5.0.0-beta2",
     "bootstrap-icons": "^1.4.0",
     "eslint-config-prettier": "^8.1.0",
+    "overlayscrollbars": "^1.13.1",
+    "overlayscrollbars-ngx": "^0.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
