--- a/angular.json
+++ b/angular.json
@@ -97,6 +97,9 @@
               "./node_modules/overlayscrollbars/css/OverlayScrollbars.css",
               "src/styles/main.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/styles"]
+            },
             "scripts": []
           }
         },
